# hpstr

./: CMakeLists.txt
analysis/include/: AnaHelpers.h
analysis/plotconfigs/mc/: basicMC.json
analysis/plotconfigs/three-prong-tridents/: three-prong-trident-histos-2.3GeV.json
analysis/selections/idm/: vertexSelection_2016.json
analysis/selections/three-prong-tridents/: three-prong-trident-cluster-selection.json  three-prong-trident-event-selection.json
analysis/src/: AnaHelpers.cxx  MCAnaHistos.cxx
event/: CMakeLists.txt
event/include/: CalCluster.h  MCParticle.h  Particle.h  Vertex.h
event/src/: CalCluster.cxx  MCParticle.cxx  Vertex.cxx
processors/config/: anaMCTuple_cfg.py  anaTridentKF_2019_cfg.py  anaTrident_2016_cfg.py  anaTrident_2019_cfg.py  anaTrident_cfg.py  anaiDM_cfg.py  kalSimpTuple_cfg.py  mcTuple_cfg.py
processors/include/: ECalDataProcessor.h  FinalStateParticleProcessor.h  MCAnaProcessor.h  MCEcalHitProcessor.h  MCParticleProcessor.h  MCTrackerHitProcessor.h  RefittedTracksProcessor.h  SvtRawDataProcessor.h  Tracker2DHitProcessor.h  Tracker3DHitProcessor.h  TrackingProcessor.h  VertexProcessor.h  utilities.h
processors/src/: ECalDataProcessor.cxx  FinalStateParticleProcessor.cxx  FullTridentTracksAnalyzer.cxx  MCAnaProcessor.cxx  MCEcalHitProcessor.cxx  MCParticleProcessor.cxx  MCTrackerHitProcessor.cxx  RefittedTracksProcessor.cxx  SvtRawDataProcessor.cxx  ThreeProngTridentTracksAnalyzer.cxx  Tracker2DHitProcessor.cxx  Tracker3DHitProcessor.cxx  TrackingProcessor.cxx  VertexProcessor.cxx  iDM.cxx  iDMPreSelection.cxx  utilities.cxx
